# watermark-cli

./: LICENSE.txt  README.md  flake.nix  pyproject.toml
src/watermark/: __about__.py  __init__.py  main.py  watermark.py
